[package]
name = "gbln-tools"
version = "0.1.0"
edition = "2021"
authors = ["Vivian Voss <ask@vvoss.dev>"]
description = "CLI tools for GBLN (Goblin Bounded Lean Notation)"
license = "MIT"
repository = "https://github.com/gbln-org/gbln-tools"
homepage = "https://gbln.dev"
readme = "README.md"
keywords = ["gbln", "serialization", "parser", "cli", "data"]
categories = ["command-line-utilities", "encoding", "parser-implementations"]

[[bin]]
name = "gbln"
path = "src/main.rs"

[dependencies]
gbln = { path = "../core/rust" }
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
